--- a/bakery/package.json
+++ b/bakery/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "@astrojs/svelte": "^1.0.0",
     "@astrojs/tailwind": "^2.0.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "astro": "^1.2.8",
     "svelte": "^3.50.1",
+    "svelte-fa": "^3.0.3",
     "tailwindcss": "^3.1.8"
   }
 }
